# Daily-Dose-Of-241

./: CMakeLists.txt  README.md
include/: DailyDoseOf241.hpp
src/: bot.cpp  helpers.cpp  init_db.cpp
